// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileFieldWrapper renders disabled file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={true}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders disabled file input 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={true}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders file input with error message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
    <span>
       
      <Error
        error="Oh no!"
        wrapper="span"
      />
    </span>
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with error message 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *[object Object]"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders file input with help message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
  <div
    className="Help"
  >
    Ask Google!
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with help message 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
  <Text
    color="gray.700"
    fontSize="100"
    lineHeight="100"
    pt="200"
  >
    Ask Google!
  </Text>
</Box>
`;

exports[`FileFieldWrapper renders file input with multiple allowed file types 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept={
        Array [
          ".txt,.csv",
        ]
      }
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span>
        test.txt
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with multiple allowed file types 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept={
        Array [
          ".txt,.csv",
        ]
      }
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Text>
          test.txt
        </Text>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders file input with no specified type 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=""
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with no specified type 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=""
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders file input with selected filename 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span>
        test.csv
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with selected filename 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label="Test File Input *"
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Text>
          test.csv
        </Text>
      </Box>
    </n>
  </Box>
</Box>
`;

exports[`FileFieldWrapper renders with a hidden label 1`] = `
<fieldset
  className="Field"
>
  <Label />
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders with a hidden label 2`] = `
<Box
  as="fieldset"
  border="none"
  ml="0"
  mr="0"
  p="0"
>
  <Label
    label=""
  />
  <Box
    display="flex"
    justifyContent="space-between"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <Box
        py="500"
      >
        <Box
          as="span"
          display="flex"
          justifyContent="center"
        >
          <Text>
            <Text
              as="span"
              fontWeight="medium"
            >
              Drag and drop
            </Text>
            <Text
              as="span"
            >
               a file, or 
            </Text>
            <Text
              as="u"
              color="blue.700"
              fontWeight="medium"
            >
              select a file
            </Text>
            <Text
              as="span"
            >
               to upload
            </Text>
          </Text>
        </Box>
      </Box>
    </n>
  </Box>
</Box>
`;
